use bioroboticslab namespace

--- a/ubuntu-15.04-biotracker/Dockerfile
+++ b/ubuntu-15.04-biotracker/Dockerfile
@@ -1,6 +1,6 @@
 # This dockerfile is used to run the biotracker
 
-FROM biotracker/ubuntu-15.04-slave
+FROM bioroboticslab/ubuntu-15.04-slave
 Maintainer Michael Wittig <witmic1@gmail.com>
 
 # install all dependencies
