[arch-python] use pacman for matplotlib and skimage

--- a/arch-linux-biorobotics-python/Dockerfile
+++ b/arch-linux-biorobotics-python/Dockerfile
@@ -10,14 +10,15 @@ RUN pacman -S --noconfirm \
     python-numpy \
     python-scipy \
     python-pillow \
+    python-matplotlib \
+    python-scikit-image \
     jupyter \
     ipython-notebook \
     mathjax
 
 RUN pip install -r https://raw.githubusercontent.com/Lasagne/Lasagne/master/requirements.txt
 RUN pip install keras==0.3.0 \
-    scikit-learn \
-    scikit-image
+    scikit-learn 
 
 ENV CUDA_ROOT=/opt/cuda
 ENV THEANO_FLAGS='cuda.root=/opt/cuda,device=gpu,floatX=float32'
