--- a/vagrant-biotracker/Vagrantfile
+++ b/vagrant-biotracker/Vagrantfile
@@ -25,7 +25,7 @@ Vagrant.configure(2) do |config|
   # config.vm.network "forwarded_port", guest: 80, host: 8080
 
   # Forward RDP port
-  config.vm.network "forwarded_port", guest: 3389, host: 3389
+  config.vm.network "forwarded_port", guest: 3389, host: 53389
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
@@ -41,6 +41,8 @@ Vagrant.configure(2) do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
+  
+  config.vm.guest = :windows
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -77,5 +79,5 @@ Vagrant.configure(2) do |config|
   #   sudo apt-get install -y apache2
   # SHELL
   
-  config.vm.provision :shell, :path => "setup_requirements.cmd"
+  config.vm.provision :shell, :path => "setup-environment.ps1"
 end
