--- a/vagrant-biotracker/Vagrantfile
+++ b/vagrant-biotracker/Vagrantfile
@@ -26,6 +26,7 @@ Vagrant.configure(2) do |config|
 
   # Forward RDP port
   config.vm.network "forwarded_port", guest: 3389, host: 53389
+  config.vm.network "forwarded_port", guest: 22, host: 2222
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
@@ -70,14 +71,6 @@ Vagrant.configure(2) do |config|
   # config.push.define "atlas" do |push|
   #   push.app = "YOUR_ATLAS_USERNAME/YOUR_APPLICATION_NAME"
   # end
-
-  # Enable provisioning with a shell script. Additional provisioners such as
-  # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
-  # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   sudo apt-get update
-  #   sudo apt-get install -y apache2
-  # SHELL
   
   config.vm.provision :shell, :path => "setup-environment.ps1"
 end
