--- a/ubuntu-16.04-deeppipeline/Dockerfile
+++ b/ubuntu-16.04-deeppipeline/Dockerfile
@@ -1,48 +1,33 @@
 FROM nvidia/cuda:cudnn-devel-ubuntu16.04
 MAINTAINER Benjamin Wild <b.w@fu-berlin.de>
 
+
 RUN apt-get update && apt-get install -y --assume-yes --install-recommends \
-        python3-numpy \
-        python3-scipy \
-        python3-dev \
-        python3-setuptools \
-        python3-pip \
-        python3-nose \
-        python3-sklearn \
-        python3-skimage \
-        python3-pandas \
-        python3-h5py \
-        python3-matplotlib \
-        python3-seaborn \
+        python \
         python-dev \
+        python3 \
+        python3-dev \
+        checkinstall \
+        git \
+        build-essential \
+        cmake \
+        g++ \
+        wget \
+        libopenblas-dev \
         libavformat-dev \
         libavcodec-dev \
         libavdevice-dev \
         libavutil-dev \
         libswscale-dev \
         libavresample-dev \
-        tmux \
         qtbase5-dev \
         pkg-config \
-        capnproto \
-        build-essential \
-        checkinstall \
-        cmake \
-        g++ \
-        wget \
         libbz2-dev \
-        libopenblas-dev \
-        git \
-        vim \
-        vim-nox \
-        libgflags-dev \
-        libzmqpp-dev \
-        zsh && \
-    rm -rf /var/lib/apt/lists
-
+        && rm -rf /var/lib/apt/lists
 
 RUN apt-get update && apt-get build-dep -y --assume-yes --no-install-recommends \
-        libopencv-dev && \
+        libopencv-dev \
+        libboost-all-dev && \
     rm -rf /var/lib/apt/lists
 
 RUN mkdir -p /tmp/source && \
@@ -61,6 +46,7 @@ RUN mkdir -p /tmp/source && \
           -DBUILD_EXAMPLES=OFF \
           /tmp/source/opencv && \
     make -j `nproc`
+
 RUN cd /tmp/build/opencv && checkinstall
 
 
@@ -75,4 +61,31 @@ RUN cd /tmp/source && \
 RUN cd /tmp/source/boost_1_61_0 && \
     ./b2 -j `nproc` install
 
+RUN apt-get update && apt-get install -y --assume-yes --install-recommends \
+        python3-numpy \
+        python3-scipy \
+        python3-setuptools \
+        python3-pip \
+        python3-nose \
+        python3-sklearn \
+        python3-skimage \
+        python3-pandas \
+        python3-h5py \
+        python3-matplotlib \
+        python3-seaborn \
+        tmux \
+        capnproto \
+        vim \
+        vim-nox \
+        libgflags-dev \
+        libzmqpp-dev \
+        jq \
+        zsh && \
+    rm -rf /var/lib/apt/lists
+
 RUN pip3 install --no-deps Theano keras==1.0.3 jupyter xgboost
+
+RUN locale-gen en_US.UTF-8
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
