--- a/ansible-biotracker/Vagrantfile
+++ b/ansible-biotracker/Vagrantfile
@@ -15,6 +15,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "opentable/win-2012r2-standard-amd64-nocm"
 
   config.vm.communicator="winrm"
+  config.vm.guest = :windows
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
